--- a/content/publication/Microglia_TBI/cite.bib
+++ b/content/publication/Microglia_TBI/cite.bib
@@ -1,12 +1,15 @@
-@article {El-Daher2024.06.04.597300,
-	author = {El-Daher, Francois and Drake, Louisa K. and Enos, Stephen J. and Wehner, Daniel and Westphal, Markus and Porter, Nicola J. and Becker, Catherina G. and Becker, Thomas},
-	title = {Wound closure after brain injury relies on force generation by microglia in zebrafish},
-	elocation-id = {2024.06.04.597300},
-	year = {2024},
-	doi = {10.1101/2024.06.04.597300},
-	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {Wound closure after a brain injury is critical for tissue restoration but this process is still not well characterized at the tissue level. We use live observation of wound closure in larval zebrafish after inflicting a stab wound to the brain. We demonstrate that the wound closes in the first 24 hours after injury by global tissue contraction. Microglia accumulation at the point of tissue convergence precedes wound closure and computational modelling of this process indicates that physical traction by microglia could lead to wound closure. Indeed, genetically or pharmacologically depleting microglia leads to defective tissue repair. Live observations indicate centripetal deformation of astrocytic processes contacted by migrating microglia. Severing such contacts leads to retraction of cellular processes, indicating tension. Weakening tension by disrupting the F-actin stabilising gene lcp1 in microglial cells, leads to failure of wound closure. Therefore, we propose a previously unidentified mechanism of brain repair in which microglia has an essential role in contracting spared tissue. Understanding the mechanical role of microglia will support advances in traumatic brain injury therapiesCompeting Interest StatementThe authors have declared no competing interest.},
-	URL = {https://www.biorxiv.org/content/early/2024/06/13/2024.06.04.597300},
-	eprint = {https://www.biorxiv.org/content/early/2024/06/13/2024.06.04.597300.full.pdf},
-	journal = {bioRxiv}
+@article {El-Dahere202403052,
+	author = {El-Daher, Francois and Enos, Stephen J and Drake, Louisa K and Wehner, Daniel and Westphal, Markus and Porter, Nicola J and Becker, Catherina G and Becker, Thomas},
+	title = {Microglia are essential for tissue contraction in wound closure after brain injury in zebrafish larvae},
+	volume = {8},
+	number = {1},
+	elocation-id = {e202403052},
+	year = {2025},
+	doi = {10.26508/lsa.202403052},
+	publisher = {Life Science Alliance},
+	abstract = {Wound closure after brain injury is crucial for tissue restoration but remains poorly understood at the tissue level. We investigated this process using in vivo observations of larval zebrafish brain injury. Our findings show that wound closure occurs within the first 24 h through global tissue contraction, as evidenced by live-imaging and drug inhibition studies. Microglia accumulate at the wound site before closure, and computational models suggest that their physical traction could drive this process. Depleting microglia genetically or pharmacologically impairs tissue repair. At the cellular level, live imaging reveals centripetal deformation of astrocytic processes contacted by migrating microglia. Laser severing of these contacts causes rapid retraction of microglial processes and slower retraction of astrocytic processes, indicating tension. Disrupting the lcp1 gene, which encodes the F-actin{\textendash}stabilising protein L-plastin, in microglia results in failed wound closure. These findings support a mechanical role of microglia in wound contraction and suggest that targeting microglial mechanics could offer new strategies for treating traumatic brain injury.The data that support the findings of this study are available from the corresponding author upon reasonable request.},
+	URL = {https://www.life-science-alliance.org/content/8/1/e202403052},
+	eprint = {https://www.life-science-alliance.org/content/8/1/e202403052.full.pdf},
+	journal = {Life Science Alliance}
 }
+
